# haier-europe-datathon

./: .gitignore  README.md  eda.ipynb  model.py  pyproject.toml
data/: product_master.csv
